<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
	android:padding="5dip"
     >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introductionTitle"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="openPreferences"
        android:text="@string/openPreferences"
        android:textColor="@color/black"
         />    
    
    <Button
        android:id="@+id/startService"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="startReaderService"
        android:text="@string/startService"
        android:textColor="@color/black"
        
         />

    <Button
        android:id="@+id/startBluetoothService"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="startBluetoothReaderService"
        android:text="@string/startScan"
        android:textColor="@color/black"

        />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="2"
        android:stretchColumns="1" >

        <TableRow>

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/serviceStatus"
                android:textColor="@color/black"
                android:textSize="20sp"
                 />

            <TextView
                android:id="@+id/serviceStatus"
                android:gravity="right"
                android:padding="3dip"
                android:text="@string/serviceStatusUnknown"
                android:textColor="@color/black"
                android:textSize="20sp"
                 />
        </TableRow>

        <TableRow android:id="@+id/readerStatusRow" android:visibility="gone">

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/readerStatus"
                android:textColor="@color/black"
                android:textSize="20sp"
                 />

            <TextView
                android:id="@+id/readerStatus"
                android:gravity="right"
                android:padding="3dip"
                android:text="@string/readerStatusUnknown"
                android:textColor="@color/black"
                android:textSize="20sp"
                 />
        </TableRow>

        <TableRow android:id="@+id/tagStatusRow" android:visibility="gone">

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/tagStatus"
                android:textColor="@color/black"
                android:textSize="20sp"
                 />

            <TextView
                android:id="@+id/tagStatus"
                android:gravity="right"
                android:padding="3dip"
                android:text="@string/tagStatusNone"
                android:textColor="@color/black"
                android:textSize="20sp"
                 />
        </TableRow>


    </TableLayout>

</LinearLayout>    